--- a/entries/Dog-and-Cat.html
+++ b/entries/Dog-and-Cat.html
@@ -89,54 +89,43 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
     <div class="left">Dog roommates love:</div>
     <div class="right">
       <ul class="clearfix">
-        <li><a href="">Lorem.</a></li>
-        <li><a href="">Vero!</a></li>
-        <li><a href="">Doloribus.</a></li>
-        <li><a href="">Facilis.</a></li>
-        <li><a href="">Cum.</a></li>
-        <li><a href="">Quam?</a></li>
-        <li><a href="">Consequuntur.</a></li>
-        <li><a href="">Laudantium.</a></li>
-        <li><a href="">Corrupti.</a></li>
-        <li><a href="">Aliquam.</a></li>
-        <li><a href="">In?</a></li>
-        <li><a href="">Voluptates.</a></li>
-        <li><a href="">At!</a></li>
-        <li><a href="">Sint.</a></li>
-        <li><a href="">Accusantium?</a></li>
-        <li><a href="">Obcaecati?</a></li>
-        <li><a href="">Eveniet.</a></li>
-        <li><a href="">Nulla.</a></li>
-        <li><a href="">Voluptatum.</a></li>
-        <li><a href="">Sint.</a></li>
-      </ul>
+        <li class="select"><a href="">Napping💤</a></li>
+        <li><a href="">Sunshine🌞</a></li>
+        <li><a href="">Windowsills🪟</a></li>
+        <li><a href="">Laziness🥱</a></li>
+        <li><a href="">Comfort🛏️</a></li>
+        <li><a href="">Stretching🐾</a></li>
+        <li><a href="">Fetching🎾</a></li>
+        <li><a href="">Scratching the sofa😈</a></li>
+        <li><a href="">Knocking over cups🤔</a></li>
+        <li><a href="">Mischief🪄</a></li>
+        <li><a href="">Chasing tails🐕</a></li>
+        <li><a href="">Jumping🎉</a></li>
+        <li><a href="">Being playful☺️</a></li>
+        <li><a href="">Bouncing around⚽️</a></li>
+        <li><a href="">Freedom⛰️</a></li>
+    </ul>
     </div>
   </div>
   <div class="choose-item clearfix">
     <div class="left">They both love</div>
     <div class="right">
       <ul class="clearfix">
-        <li><a href="">Lorem.</a></li>
-        <li><a href="">Vero!</a></li>
-        <li><a href="">Doloribus.</a></li>
-        <li><a href="">Facilis.</a></li>
-        <li><a href="">Cum.</a></li>
-        <li><a href="">Quam?</a></li>
-        <li><a href="">Consequuntur.</a></li>
-        <li><a href="">Laudantium.</a></li>
-        <li><a href="">Corrupti.</a></li>
-        <li><a href="">Aliquam.</a></li>
-        <li><a href="">In?</a></li>
-        <li><a href="">Voluptates.</a></li>
-        <li><a href="">At!</a></li>
-        <li><a href="">Sint.</a></li>
-        <li><a href="">Accusantium?</a></li>
-        <li><a href="">Obcaecati?</a></li>
-        <li><a href="">Eveniet.</a></li>
-        <li><a href="">Nulla.</a></li>
-        <li><a href="">Voluptatum.</a></li>
-        <li><a href="">Sint.</a></li>
-      </ul>
+        <li class="select"><a href="">Napping💤</a></li>
+        <li><a href="">Sunshine🌞</a></li>
+        <li><a href="">Windowsills🪟</a></li>
+        <li><a href="">Laziness🥱</a></li>
+        <li><a href="">Comfort🛏️</a></li>
+        <li><a href="">Stretching🐾</a></li>
+        <li><a href="">Playtime🎾</a></li>
+        <li><a href="">Scratching the sofa😈</a></li>
+        <li><a href="">Knocking over cups🤔</a></li>
+        <li><a href="">Mischief🪄</a></li>
+        <li><a href="">Chasing shadows👥</a></li>
+        <li><a href="">Jumping🎉</a></li>
+        <li><a href="">Being playful☺️</a></li>
+        <li><a href="">Bouncing around⚽️</a></li>
+    </ul>
     </div>
   </div>
 </div>
@@ -150,151 +139,191 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
             But your snuggles and barks make everything right!">
           </a>
         </div>
-        <div class="name a">a poem</div>
-        <div class="score">9.9</div>
+        <div class="name a">Proud</div>
+        <div class="score">8.8</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/bye.png" alt="" data-content="Goodbye, My Friend
-
-            Time to travel, my furry mate,
-            With a wag and a purr, we’ll celebrate.
-            Chase your dreams, have fun out there,
-            I’ll miss you tons, but don’t despair!">
+            <img src="../images/oc/bye.png" alt="" data-content="The dog’s by the door, waiting for a friend,
+            The cat curls tight, hoping it won’t end.
+            Both want attention, both want to play,
+            But no one’s here to brighten their day.">
           </a>
         </div>
-        <div class="name a">another poem</div>
-        <div class="score">4.9</div>
+        <div class="name a">Lonely </div>
+        <div class="score">4.0</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/cry.png" alt="" data-content="This is the text for Image 1">
+            <img src="../images/oc/cry.png" alt="" data-content="The dog looks out the window with a sigh,
+            The cat, too, watches time go by.
+            No wagging tails, no playful paws,
+            Just a quiet day without applause.">
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Sad</div>
+        <div class="score">1.1</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/lessionme.png" alt="" data-content="This is the text for Image 111111">
+            <img src="../images/oc/lessionme.png" alt="" data-content="The dog sniffs the cat’s strange food,
+            The cat watches the dog, feeling the mood.
+            What’s that smell, what’s that sound?
+            They investigate all that’s around.">
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Curious</div>
+        <div class="score">8.9</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/dontgo.png" alt="" data-content="This is the text for Image 11">
+            <img src="../images/oc/dontgo.png" alt="" data-content="The dog barks at the cat on the chair,
+            The cat yawns and pretends not to care.
+            But when the dog gets a treat or two,
+            The cat gives a glare—like “I want one too!”">
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Jealous </div>
+        <div class="score">7.2</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/hiii.png" alt="" data-content="This is the text for Image 1111">
+            <img src="../images/oc/hiii.png" alt="" data-content="The dog jumps back from a sudden sound,
+            The cat leaps up from the ground.
+            They both freeze, then look around—
+            What was that noise? It can’t be found!">
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Surprised</div>
+        <div class="score">7.9</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/shock.png" alt="" data-content="This is the text for Image ajjj">
+            <img src="../images/oc/shock.png" alt="" data-content="The dog whimpers, tail tucked low,
+            The cat hides under the couch, too slow.
+            Something’s wrong, a shadow’s near,
+            They both shudder, full of fear.">
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Fearful</div>
+        <div class="score">2.2</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/hug.png" alt="" data-content="This is the text for Image www">
+            <img src="../images/oc/hug.png" alt="" data-content="The dog barks loudly, eyes wide with fright,
+            The cat runs fast, disappearing from sight.
+            What happened? What’s wrong? Where did they go?
+            Something’s amiss, they both want to know.">
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Panic</div>
+        <div class="score">4.6</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/sadcrycry.png" alt="" data-content="This is the text for Image zozo">
+            <img src="../images/oc/sadcrycry.png" alt="" data-content="The dog chews the shoe, tail wagging with glee,
+            The cat knocks the lamp, as carefree as can be.
+            But now they look at their mess, feeling the sting,
+            What have they done? Oh, what did they bring?">
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Regret</div>
+        <div class="score">1.0</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/likeyou.png" alt="" data-content="This is the text for Image zodl">
+            <img src="../images/oc/likeyou.png" alt="" data-content="The dog wags his tail, eyes full of charm,
+            The cat purrs, trying to disarm.
+            A little nuzzle, a playful glance,
+            They both try to win a little romance.">
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Flirtatious</div>
+        <div class="score">9.2</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/loveyou.png" alt="" data-content="This is the text for Image aaa">
+            <img src="../images/oc/loveyou.png" alt="" data-content="The dog licks your hand with a happy grin,
+            The cat purrs softly, letting you in.
+            They both know, in their own way,
+            You’re the reason for their joy today.">
           </a>
         </div>
-        <div class="name a">Opossum</div>
+        <div class="name a">Grateful</div>
         <div class="score">9.9</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/oyasumi.png" alt="" data-content="This is the text for Image qoqo">
+            <img src="../images/oc/oyasumi.png" alt="" data-content="The dog curls up in a soft, warm ball,
+            The cat stretches long, then starts to fall.
+            Both yawn wide, their eyes start to close,
+            Drifting to sleep as the evening slows.">
           </a>
         </div>
-        <div class="name a">Opossum</div>
+        <div class="name a">Sleepy</div>
+        <div class="score">8.9</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/addd.png" alt="" data-content="The dog lies in the sun, eyes half-closed,
+            The cat purrs quietly, feeling composed.
+            No rush, no stress, just peace in the air,
+            Both are content without a care.">
+          </a>
+        </div>
+        <div class="name a">Content</div>
+        <div class="score">7.1</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/paipai.png" alt="" data-content="he dog wears a sock on his head,
+            The cat rolls over and tumbles in bed.
+            They both act goofy, no care at all,
+            Just laughing together in their playful thrall.">
+          </a>
+        </div>
+        <div class="name a">Silly</div>
+        <div class="score">4.2</div>
+      </div>
+      <div class="wflbb-item">
+        <div class="poster">
+          <a href="">
+            <img src="../images/oc/tanks.png" alt="" data-content="The dog looks out the window bright,
+            The cat dreams of birds in flight.
+            Both waiting for something to change,
+            For new adventures, a little exchange.">
+          </a>
+        </div>
+        <div class="name a">Hopeful</div>
         <div class="score">9.9</div>
       </div>
       <div class="wflbb-item">
         <div class="poster">
           <a href="">
-            <img src="../images/oc/addd.png" alt="" data-content="This is the text for Image 1">
+            <img src="../images/oc/ok.png" alt="" data-content="The dog steals the sock with a sneaky grin,
+            The cat knocks the vase—what a win!
+            They’re both in trouble, but they don’t care,
+            The mischief is too much to bear."> 
           </a>
         </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/oc/paipai.png" alt="" data-content="This is the text for Image 1">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/oc/tanks.png" alt="" data-content="This is the text for Image 1">
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
-      </div>
-      <div class="wflbb-item">
-        <div class="poster">
-          <a href="">
-            <img src="../images/oc/ok.png" alt="" data-content="This is the text for Image 1"> 
-          </a>
-        </div>
-        <div class="name a">Opossum</div>
-        <div class="score">9.9</div>
+        <div class="name a">Naughty</div>
+        <div class="score">8.7</div>
       </div>
       <div class="pagerr">
         <a href="">previous page</a>
         <a href="">1</a><a href="">2</a><a href="">3</a><a href="">4</a><a href="">5</a><a href="">6</a><a href="">7</a><a href="">8</a><a href="">9</a><a href="">10</a>
-        <a href="../entries/Homepage.html">Back homepage </a>
+        <a href="../index.html">Back homepage </a>
       </div>
     </div>
     <div></div>
@@ -308,10 +337,7 @@ document.querySelector('.modal .close').addEventListener('click', closeModal);
   <div class="container2333">
     <div class="main2333">
       <div id="modal-text">
-        In a sunlit space, a cat and a pup,
-        Napping and playing, with love filling up.
-        Mischief and cuddles, they dance through the day,
-        Best friends forever, in their joyful play. </div>
+        Here are some cute poems about the emotions of little kittens and puppies. Read them to find out what’s going on in those furry little minds! </div>
       <div class="close">X</div>
     </div>
   </div>
