--- a/entries/ENTRY4.html
+++ b/entries/ENTRY4.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>Dog and Cat</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,7 +15,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="../css/reset.css">
+
   <link rel="stylesheet" href="../css/About.css">
+
   
   
 
@@ -30,28 +33,28 @@
       <div id="drawerboxes">
         <div class="drawerbox active">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            About this space
             <span class="drawer-head">1</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Top Location
             <span class="drawer-head">2</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Good Breakfast
             <span class="drawer-head">3</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Reserve
             <span class="drawer-head">4</span>
           </button>
         </div>
@@ -66,64 +69,65 @@
       </div>
       <div id="card-section">
         <div id="card1" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Dog and Cat</div>
+          <div class="card-title">A Snug Home</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Purrfect for Cats & Woof-tastic for Dogs!
+            Cozy corners, comfy beds, and endless cuddles await your furry friends! 🐾💖
           </div>
           <div class="card-img">
-            <img src="../images/oc/tnaks.jpg" alt="">
+            <img src="../images/entriesimg/contain/aa.png" alt="">
           </div>
         </div>
 
         <div id="card2" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Top Location</div>
+          <div class="card-title">The owner’s home</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            In New York, homes are filled with the pitter-patter of paws, where cats curl up and dogs wag their tails in cozy city spaces. 🐾🏙️
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/map.png" alt="">
           </div>
         </div>
 
         <div id="card3" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Good Breakfast</div>
+          <div class="card-title">Kibble</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            A delicious breakfast of high-quality kibble, rich in protein, vitamins, and minerals—perfect for starting the day strong! 🐾🍖🥣
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/entriesimg/opossum/IMG_1757.PNG" alt="">
           </div>
         </div>
 
         <div id="card4" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Dog and Cat Home</div>
+          <div class="card-title">Reserve Now</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Whether your dog loves to play fetch or your cat prefers a peaceful nap by the window, our house caters to both. Dogs get plenty of space to run, fetch, and explore, while cats enjoy quiet corners to curl up in. Every personality is welcomed with love and care—book your furry friend’s stay today! 🐾🐱🐶
           </div>
           <div class="container">
 
-            <a href="#" class="button type--A">
+            <a href="../entries/Dog-and-Cat.html" class="button type--A">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text" >Sure!</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--B">
+              <a href="../index.html" class="button type--B">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">No thanks</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--C">
+              <a href="../entries/ENTRY5.html" class="button type--C">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">See other options</a></span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
@@ -229,3 +233,4 @@
 </script>
 </body>
 </html>
+
