--- a/entries/Oyster.html
+++ b/entries/Oyster.html
@@ -49,7 +49,7 @@
       </p>
     </p>
 
-    <img src="../images/Oysters/colorful-tank.jpg" alt="image of selling oysters" class="tank" onclick="changeImage(this)">    <li><a href="../entries/Homepage.html" style="color: rgb(15, 120, 211); text-decoration: none; font-size: 1.5em;">Return to the homepage</a></li>
+    <img src="../images/Oysters/colorful-tank.jpg" alt="image of selling oysters" class="tank" onclick="changeImage(this)">    <li><a href="../index.html" style="color: rgb(15, 120, 211); text-decoration: none; font-size: 1.5em;">Return to the homepage</a></li>
 
     <!--catalogs-->
     <a href="#chapter1">Filtration</a>
