--- a/entries/test1.0.html
+++ b/entries/test1.0.html
@@ -28,97 +28,138 @@
 <body>
 <article class="containerZz">
   <header>
-    <h1>this is my name hahahaha</h1>
+    <h1>The Return of the Brooklyn Beaver</h1>
     <div class="original-link">
-      ohohohoh<a href="">https://www.stardewvalleyconcert.com</a>
+    <a href="../index.html">Return to the homepage</a>
     </div>
   </header>
 
   <div class="banner0-o">
     <div class="imgsos">
-      <a href="" ><img src="../images/duckgogogo.jpg"></a>
-      <a href="" ><img src="../images/lingshi/duckgo.jpg"></a>
-      <a href="" ><img src="../images/lingshi/duckgogo.jpg"></a>
+      <a href=""><img src="../images/entriesimg/Beaver/IMG_1768.JPG" alt="Image 1"></a>
+      <a href=""><img src="../images/entriesimg/Beaver/IMG_1767.JPG" alt="Image 2"></a>
+      <a href=""><img src="../images/entriesimg/Beaver/IMG_1766.JPG" alt="Image 3"></a>
+      <a href=""><img src="../images/entriesimg/Beaver/IMG_1765.JPG" alt="Image 4"></a>
     </div>
     <div class="leftsmallrain">&lt;</div>
     <div class="rightsmallrain">&gt;</div>
     <div class="modal">
       <div class="titleOwO">
-        <h2>let me do it for you kumi</h2>
+        <h2>Chewing wood, nibble nibble</h2>
       </div>
       <div class="dots">
         <ul>
-          <li></li>
-          <li></li>
-          <li></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
+          <li class="dot"></li>
         </ul>
       </div>
     </div>
-  </div> 
+  </div>
 
   <section>
     <h2>chapter1</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo sunt enim provident laborum beatae minima aliquid dolor libero culpa perferendis, quas quis dignissimos exercitationem impedit facilis magni velit dolorum animi!</p>
-    <p>Commodi voluptas animi accusantium maxime illum veniam aperiam cumque sint expedita odio consectetur libero, fuga eos doloremque velit dicta quibusdam labore ipsum officia, amet itaque ducimus nulla magnam dolore! Quas!</p>
-    <p>Voluptate vitae quibusdam quae debitis, illum repellendus unde natus voluptatem, tempora temporibus rem? Deserunt suscipit maiores aliquid nostrum similique perspiciatis quam, vitae est facere saepe ex quia dolor animi minima!</p>
+    <p>One warm evening, in the bustling borough of Brooklyn, a young woman named Claire was out for a walk by the river when something unusual caught her eye. A dark shape emerged from the water, its flat tail slapping the surface before it vanished again. She blinked in disbelief. Had she just seen… a beaver? It was almost impossible to believe that such a creature could thrive in the heart of New York City. But there it was—an unexpected visitor from nature’s past, making its way through the Bronx River once again, more than two hundred years after it had vanished from the city’s landscape. Claire decided to find out more about this curious creature.</p>
     <div class="chapter-image-frame">
-      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <img src="../images/entriesimg/Beaver/IMG_1779.JPG" alt="Chapter Image">
       <div class="text-content">
-          <div class="title">AIM for happiness</div>
-          <div class="description">How do I live</div>
+          <div class="title">Discovery</div>
+          <div class="description">The Unexpected Visitor</div>
       </div>
   </section>
   <section>
     <h2>chapter2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur consequatur officiis repellendus, animi dolorem aspernatur iste qui sed? Incidunt ex impedit maiores veniam corporis? Praesentium nihil voluptatum est aliquam pariatur!</p>
-    <p>Ducimus necessitatibus corrupti, voluptates, sequi temporibus, quibusdam neque tempore accusantium nobis facilis dignissimos laborum ut doloremque. Alias, ab magni quos laborum molestiae quo illo doloremque, odio eaque, sunt nulla adipisci.</p>
-    <p>Iusto magnam tempore, consectetur corporis expedita accusamus tempora sunt quia sequi unde fugiat recusandae repellat nisi placeat animi autem saepe dolores in ipsa, ducimus voluptas! Animi quo nam doloribus nobis!</p>
+    <p>Beavers, as Claire soon learned, had a deep connection to New York. Back in the 1600s, their pelts were highly sought after by European traders, which led to a flourishing fur trade. The city’s growth was partly fueled by the abundance of these industrious creatures. However, over-trapping and habitat loss caused the beaver population to plummet. By the time Claire had arrived on the scene, beavers were more legend than reality in the city. Yet, their persistence to return was a testament to their tenacity—beavers had found their way back to New York through careful reintroduction programs in the early 1900s, and now they were making their home once again in urban waters.</p>
     <div class="chapter-image-frame">
-      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <img src="../images/entriesimg/Beaver/IMG_1778.JPG" alt="Chapter Image">
       <div class="text-content">
-          <div class="title">AIM for happiness</div>
-          <div class="description">How do I live</div>
+          <div class="title">Legacy</div>
+          <div class="description">The History of the Beaver</div>
       </div>
   </div>
   </section>
   <section>
     <h2>chapter3</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro quas autem ratione qui exercitationem suscipit ipsum quidem nisi, animi alias. Repellat temporibus ratione reprehenderit in maiores pariatur sint maxime consectetur.</p>
-    <p>Ex et quis repellendus deserunt officia, modi vel doloribus tenetur, dolorem, repudiandae aut ullam magni cumque? Est facere, fuga qui, totam nihil sapiente expedita delectus ex voluptatem veritatis iure suscipit?</p>
-    <p>Earum, molestiae cum. In nostrum et recusandae expedita magnam vitae praesentium, ipsam temporibus amet rem delectus! Sequi magni est pariatur illo sit, facere voluptatibus nihil ipsam aut possimus vitae asperiores!</p>
+    <p>Beavers were more than just a symbol of nature’s resilience; they were master engineers. Claire read about how these creatures could transform their surroundings, building dams to create ponds for safety and food storage. They gnawed down trees with their sharp orange teeth, shaping their environment just as humans had shaped the city. She marveled at the parallel: both beavers and New Yorkers were innovators, constantly modifying their environment to survive and thrive. And just like that, beavers were no longer just a piece of New York’s past; they were a part of its living, breathing future.</p>
     <div class="chapter-image-frame">
-      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <img src="../images/entriesimg/Beaver/IMG_1777.JPG" alt="Chapter Image">
       <div class="text-content">
-          <div class="title">AIM for happiness</div>
-          <div class="description">How do I live</div>
+          <div class="title">Innovation</div>
+          <div class="description">Building the City, Beaver Style</div>
       </div>
   </section>
   <section>
     <h2>chapter4</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, corrupti? Sed quas deserunt atque iste fugit possimus quisquam vero perferendis culpa molestiae ab vitae, laboriosam, magni dicta soluta voluptatem odio.</p>
-    <p>Incidunt sint, quos facilis, accusantium vitae rerum qui, iusto quaerat fugit assumenda delectus eius ratione nulla quia suscipit explicabo dolore perferendis? Architecto doloremque aut dolores, reiciendis inventore excepturi eius odio.</p>
-    <p>Minus optio odio quae ex, consequuntur enim excepturi hic fugit odit iste qui eos, voluptates maxime modi sunt autem corporis quo aperiam obcaecati rerum vitae ab aspernatur. Quibusdam, quas necessitatibus!</p>
+    <p>Beavers were known for their tight-knit family units, and Claire was enchanted by the idea of such a close family life. These nocturnal creatures would spend their nights building lodges and storing food for winter, all while caring for their young kits. Claire often wondered what it would be like to live so in tune with nature, building something from nothing, working alongside loved ones to create a safe, cozy home. The beaver family reminded her of the importance of community, a value so deeply woven into the fabric of New York itself, where neighborhoods became families and everyone worked together to thrive.</p>
     <div class="chapter-image-frame">
-      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <img src="../images/entriesimg/Beaver/IMG_1776.JPG" alt="Chapter Image">
       <div class="text-content">
-          <div class="title">AIM for happiness</div>
-          <div class="description">How do I live</div>
+          <div class="title">Community</div>
+          <div class="description">The Beaver Family</div>
       </div>
   </section>
   <section>
     <h2>chapter5</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita velit harum eum? Impedit, libero animi harum incidunt fuga quo cumque officiis, et nam numquam perferendis alias nisi, nesciunt quod quidem.</p>
-    <p>At soluta non adipisci temporibus. Veritatis sequi quam voluptatum ducimus, eveniet provident error, quo excepturi nisi consequuntur dolores delectus, accusamus iste autem omnis corrupti officiis at! Eos mollitia deleniti perspiciatis?</p>
-    <p>Deleniti repudiandae sed rerum. Odit, maiores iusto quas nemo pariatur vitae adipisci, unde quam placeat veniam minima beatae ab quibusdam quasi eligendi aut ut maxime a, consectetur itaque inventore dolores.</p>
+    <p>As Claire’s journey to learn about the beavers continued, she realized the challenges the creatures faced in modern urban environments. The city was growing, and beavers needed space to roam. Their dams could flood streets, and their gnawing could damage trees. But Claire also learned that people in New York had found ways to coexist with these resilient creatures. There were measures in place to protect them, to monitor their habitats, and to ensure their safe return to the wild. The beavers weren’t just surviving—they were a testament to the city’s ability to adapt and make room for the creatures who had once been an integral part of its history. In a way, they represented the spirit of New York itself—surviving, thriving, and finding space in the world to live freely.</p>
     <div class="chapter-image-frame">
-      <img src="../images/duckgogogo.jpg" alt="Chapter Image">
+      <img src="../images/entriesimg/Beaver/IMG_1775.JPG" alt="Chapter Image">
       <div class="text-content">
-          <div class="title">AIM for happiness</div>
-          <div class="description">How do I live</div>
+          <div class="title">Coexistence</div>
+          <div class="description">The New York Beaver’s Future</div>
           <a href="../entries/Homepage.html">
       </div>
   </section>
 </article>
 </div>
 </body>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+  const imgsos = document.querySelector('.imgsos');
+  const images = imgsos.querySelectorAll('a');
+  const leftButton = document.querySelector('.leftsmallrain');
+  const rightButton = document.querySelector('.rightsmallrain');
+  const dots = document.querySelectorAll('.modal .dots .dot');
+  let currentIndex = 0;
+
+  // Update the displayed image based on the current index
+  function updateSlider() {
+    // Move the images by the index, each image takes full width
+    imgsos.style.transform = `translateX(-${currentIndex * 100}%)`;
+
+    // Update dots
+    dots.forEach(dot => dot.style.backgroundColor = '#999'); // Reset all dots
+    dots[currentIndex].style.backgroundColor = '#369'; // Highlight the current dot
+  }
+
+  // Event listener for the left button
+  leftButton.addEventListener('click', function () {
+    currentIndex = (currentIndex === 0) ? images.length - 1 : currentIndex - 1;
+    updateSlider();
+  });
+
+  // Event listener for the right button
+  rightButton.addEventListener('click', function () {
+    currentIndex = (currentIndex === images.length - 1) ? 0 : currentIndex + 1;
+    updateSlider();
+  });
+
+  // Event listener for dot navigation
+  dots.forEach((dot, index) => {
+    dot.addEventListener('click', function () {
+      currentIndex = index;
+      updateSlider();
+    });
+  });
+
+  // Initialize slider
+  updateSlider();
+  
+  // Optional: Auto-slide every 3 seconds
+  setInterval(function () {
+    currentIndex = (currentIndex === images.length - 1) ? 0 : currentIndex + 1;
+    updateSlider();
+  }, 3000);
+});
+</script>
 </html>
