--- a/entries/test3.0.html
+++ b/entries/test3.0.html
@@ -25,75 +25,135 @@
 <body>
 <header class="header">
   <ul class="topnav clearfix">
-    <li><a href="">Lorem.</a></li>
-    <li><a href="">Eveniet.</a></li>
-    <li><a href="">Fuga?</a></li>
-    <li><a href="">奶牛猫服务</a>
+    <li><a href="../index.html">Return</a>
+    <li><a href="">Black-crowned Night Heron</a>
+      <div class="submenu">
+        <ul>
+          <li>Elegant</li>
+          <li>Nocturnal</li>
+          <li>Fisher!</li>
+          <li>Marsh-dweller</li>  
+          <li>Black-crowned</li>  
+          <li>Shy</li>  
+          <li>Patient</li>
+          <li>Clever</li>
+          <li>Moonlit</li>       
+         </ul>
+      </div>  
+  </li>
+    <li><a href="">Double-crested Cormorant</a>
+      <div class="submenu">
+        <ul>  
+          <li>Sleek</li>  
+          <li>Glossy</li>  
+          <li>Swimmer</li>  
+          <li>Fisher</li>  
+          <li>Superhero-like</li>  
+          <li>Crested</li>  
+          <li>Sunbather</li>  
+          <li>Diver</li>  
+          <li>Graceful</li>  
+          <li>Focused</li>  
+        </ul>  
+      </div>  
+  </li>
+    <li><a href="">American White Pelican</a>
+      <div class="submenu">
+        <ul>  
+          <li>Massive</li>  
+          <li>Graceful</li>  
+          <li>Glider</li>  
+          <li>Flock-loving</li>  
+          <li>Scooper</li>  
+          <li>Peaceful</li>  
+          <li>White-feathered</li>  
+          <li>Cloud-like</li>  
+          <li>Majestic</li>  
+          <li>Serene</li>  
+        </ul>          
+      </div>  
+  </li>
+    <li><a href="">Red-breasted Merganser</a>
         <div class="submenu">
-          <ul>
-            <li>Lorem.</li>
-            <li>Ducimus?</li>
-            <li>Doloribus!</li>
-            <li>Tempora.</li>
-            <li>Architecto!</li>
-            <li>Unde?</li>
-            <li>Sed.</li>
-            <li>Corporis.</li>
-            <li>Reiciendis.</li>
-            <li>Aspernatur!</li>
-          </ul>
+          <ul>  
+            <li>Spiky-haired</li>  
+            <li>Speedy</li>  
+            <li>Diver</li>  
+            <li>Quirky</li>  
+            <li>Rockstar</li>  
+            <li>Red-breasted</li>  
+            <li>Aquatic</li>  
+            <li>Swift</li>  
+            <li>Unique</li>  
+            <li>Energetic</li>  
+          </ul>            
         </div>  
     </li>
-    <li><a href="">Labore!</a></li>
+    <li><a href="">Piping Plover</a>
+      <div class="submenu">
+        <ul>  
+          <li>Small</li>  
+          <li>Beach-loving</li>  
+          <li>Quick-footed</li>  
+          <li>Sand-colored</li>  
+          <li>Cute</li>  
+          <li>Shorebird</li>  
+          <li>Playful</li>  
+          <li>Wind-up-toy-like</li>  
+          <li>Delicate</li>  
+          <li>Endearing</li>  
+        </ul>          
+      </div>  
+  </li>
 </header>
 <div class="shell">
   <div class="box">
     <div class="images">
-      <img src="../images/Piping-Plover/Piping plover Charadrius melodus.jpg" alt="">
+      <img src="../images/entriesimg/waterbird/IMG_1820.JPG" alt="">
     </div>
     <div class="content">
       <h2 class="Zeenchin"></h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, aperiam?
+      <p>A shy, marsh-loving bird with a stylish black crown. Loves fishing by moonlight, wearing its “night owl” hat.
       </p>
     </div>
   </div>
   <div class="box">
     <div class="images">
-      <img src="../images/Piping-Plover/Piping plover Charadrius melodus.jpg" alt="">
+      <img src="../images/entriesimg/waterbird/IMG_1821.JPG" alt="">
     </div>
     <div class="content">
       <h2 class="Zeenchin"></h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, aperiam?
+      <p>A sleek swimmer with a glossy coat. Often dries its wings in the sun, looking like a tiny, feathery superhero.
       </p>
     </div>
   </div>
   <div class="box">
     <div class="images">
-      <img src="../images/Piping-Plover/Piping plover Charadrius melodus.jpg" alt="">
+      <img src="../images/entriesimg/waterbird/IMG_1822.JPG" alt="">
     </div>
     <div class="content">
       <h2 class="Zeenchin"></h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, aperiam?
+      <p>A graceful giant with a bill pouch perfect for scooping fish. Glides like a cloud and flocks for fun!
       </p>
     </div>
   </div>
   <div class="box">
     <div class="images">
-      <img src="../images/Piping-Plover/Piping plover Charadrius melodus.jpg" alt="">
+      <img src="../images/entriesimg/waterbird/IMG_1823.JPG" alt="">
     </div>
     <div class="content">
       <h2 class="Zeenchin"></h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, aperiam?
+      <p>A spiky-haired speedster with a love for diving. Its red breast and quirky crest scream “rockstar of rivers!”
       </p>
     </div>
   </div>
   <div class="box">
     <div class="images">
-      <img src="../images/Piping-Plover/Piping plover Charadrius melodus.jpg" alt="">
+      <img src="../images/entriesimg/waterbird/IMG_1825.JPG" alt="">
     </div>
     <div class="content">
       <h2 class="Zeenchin"></h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas, aperiam?
+      <p>A tiny beach dweller with sand-colored feathers. Darts along the shore like a wind-up toy chasing the tide.
       </p>
     </div>
   </div>
