--- a/entries/test5.0.html
+++ b/entries/test5.0.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>Rat</title>
   <meta name="description" content="">
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -33,26 +33,29 @@
 </head>
 <body>
     <div class="a">
-        <div class="b" style="--i:2;background-image: url(../images/oc/addd.png);"></div>
-        <div class="c" style="--i:4;--s:1; background-image: url(../images/oc/addd.png);"></div>
-        <div class="d" style="--i:3;--s:2; background-image: url(../images/oc/addd.png);"></div>
-        <div class="e" style="--i:2;--s:3; background-image: url(../images/Oysters/colorful-tank.jpg);"></div>
-        <div class="f" style="--i:1;--s:4; background-image: url(../images/oc/addd.png);"></div>
+        <div class="b" style="--i:2;background-image: url(../images/entriesimg/rats/IMG_1802.JPG);"></div>
+        <div class="c" style="--i:4;--s:1; background-image: url(../images/entriesimg/rats/IMG_1801.JPG);"></div>
+        <div class="d" style="--i:3;--s:2; background-image: url(../images/entriesimg/rats/IMG_1800.JPG);"></div>
+        <div class="e" style="--i:2;--s:3; background-image: url(../images/entriesimg/rats/IMG_1799.JPG);"></div>
+        <div class="f" style="--i:1;--s:4; background-image: url(../images/entriesimg/rats/IMG_1797.JPG);"></div>
     </div>
-    <div class=text-box>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias libero incidunt nobis, dignissimos enim cumque. Ea tenetur assumenda cum maxime excepturi, tempora, laboriosam eos vitae, ratione esse harum quibusdam. Esse a consectetur in distinctio maxime, culpa possimus debitis rerum blanditiis vitae quas repellendus consequatur, excepturi repudiandae dolorem hic officiis laudantium?
+    <div class=text-box style="font-size: 2em;">
+        In NYC, rats are the ultimate urban survivors. They roam subway tunnels, alleyways, and trash-filled streets, scavenging for scraps. Their day is spent navigating the city’s underbelly, feasting on leftover pizza crusts, and dodging human footsteps, all while staying hidden in the shadows of this bustling metropolis.
     </div>
-    <div class=text-box2>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias libero incidunt nobis, dignissimos enim cumque. Ea tenetur assumenda cum maxime excepturi, tempora, laboriosam eos vitae, ratione esse harum quibusdam. Esse a consectetur in distinctio maxime, culpa possimus debitis rerum blanditiis vitae quas repellendus consequatur, excepturi repudiandae dolorem hic officiis laudantium?
+    <div class=text-box2 style="font-size: 2em;">
+        NYC rats are expert foragers, scouring the streets and subway stations for food. They rummage through trash cans, sneak into restaurants, and feast on discarded pizza, bagels, and snacks. Their keen sense of smell helps them locate even the smallest crumbs, making them resourceful survivors in the city.
     </div>
-    <div class="button">
+    <a href="../index.html"><div class="button">
         <div class=go-back>
             GO BACK
         </div>
+    </a>
+    <a href="../entries/test5.0.html">
         <div class=last-page>
             REFREASH
         </div>
-    </div>
+    </a>
+
 
 
 
