--- a/entries/test6.0.html
+++ b/entries/test6.0.html
@@ -27,36 +27,36 @@
 
 <body>
 <div class="cards">
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card"><img src="../images/Piping-Plover/Piping-Plover-with-Chicks-iStock-resized.jpg" alt=""></div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card"><img src="../images/Piping-Plover/Piping-Plover-with-Chicks-iStock-resized.jpg" alt=""></div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card"><img src="../images/Piping-Plover/Piping-Plover-with-Chicks-iStock-resized.jpg" alt=""></div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card"><img src="../images/Piping-Plover/Piping-Plover-with-Chicks-iStock-resized.jpg" alt=""></div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card"><img src="../images/Piping-Plover/Piping-Plover-with-Chicks-iStock-resized.jpg" alt=""></div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
-  <div class="card">TEXT</div>
+  <div class="card"> NYC pigeons are as iconic as yellow cabs. 🚖🐦</div>
+  <div class="card">They thrive on dropped pizza crusts and bagels. 🍕🐦</div>
+  <div class="card">Central Park pigeons are always in search of snacks. 🌳🐦</div>
+  <div class="card">These pigeons dodge subway crowds like pros. 🚇🐦</div>
+  <div class="card"><img src="../images/entriesimg/pigeon/IMG_1831.PNG" alt=""></div>
+  <div class="card">Times Square pigeons are Broadway’s secret stars. 🎭🐦</div>
+  <div class="card">Pigeons are regulars at the Statue of Liberty. 🗽🐦</div>
+  <div class="card">NYC pigeons have their own aerial routes through buildings. 🏙️✈️</div>
+  <div class="card">Rooftops are prime sunbathing spots for NYC pigeons. 🌞🐦</div>
+  <div class="card"><img src="../images/entriesimg/pigeon/IMG_1832.PNG" alt=""></div>
+  <div class="card">Pigeons are often featured in NYC street art. 🎨🐦</div>
+  <div class="card">Occasionally, pigeons join subway rides, adding chaos. 🚇🐦</div>
+  <div class="card">Pigeons love photobombing NYC skyline selfies. 🤳🐦</div>
+  <div class="card">Many pigeons nest on NYC’s rooftops and ledges. 🏙️🐦</div>
+  <div class="card"><img src="../images/entriesimg/pigeon/未命名作品 8.png" alt=""></div>
+  <div class="card">Pigeons glide effortlessly between NYC’s skyscrapers. 🌆✈️</div>
+  <div class="card">Pigeons hang out in groups, sharing food and gossip. 🐦💬</div>
+  <div class="card">Early riser pigeons forage before most humans wake up. 🌅🐦</div>
+  <div class="card">NYC pigeons brave all weather, rain or shine. 🌧️🐦</div>
+  <div class="card"><img src="../images/entriesimg/pigeon/IMG_1829.PNG" alt=""></div>
+  <div class="card">NYC’s pigeons offer endless birdwatching opportunities. 👀🐦</div>
+  <div class="card">Pigeons have established territories throughout New York City. 🏙️🐦</div>
+  <div class="card">Pigeons perform aerial tricks while flying between buildings. 🎪🐦</div>
+  <div class="card">Pigeons thrive in NYC’s hustle, making the best out of chaos. 🌆🐦</div>
+  <div class="card"><img src="../images/entriesimg/pigeon/IMG_1831.PNG" alt=""></div>
+  <div class="card">Their shimmering feathers make pigeons the city’s street style icons. 🌟🐦</div>
+  <div class="card">Pigeons can zip through NYC streets at impressive speeds. 🚴‍♀️🐦</div>
+  <div class="card">They love posing for pictures in Central Park. 📸🐦</div>
+  <div class="card">Pigeons enjoy sitting on famous NYC statues. 🗽🐦</div>
+  <div class="card"><a href="../index.html"><button class="button-32" role="button">BACK</button></a></div>
 </div>
 
 </body>
