--- a/entries/ENTRY6.html
+++ b/entries/ENTRY6.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>opossum</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,7 +15,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="../css/reset.css">
+
   <link rel="stylesheet" href="../css/About.css">
+
   
   
 
@@ -23,6 +26,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
 </head>
+<style>
+  body{background-image: linear-gradient(#191970, #050528);}
+</style>
 <body>
 
   <div id="main">
@@ -30,28 +36,28 @@
       <div id="drawerboxes">
         <div class="drawerbox active">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            About this space
             <span class="drawer-head">1</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Top Location
             <span class="drawer-head">2</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Good Breakfast
             <span class="drawer-head">3</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Reserve
             <span class="drawer-head">4</span>
           </button>
         </div>
@@ -66,64 +72,65 @@
       </div>
       <div id="card-section">
         <div id="card1" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">opossum</div>
+          <div class="card-title">A Mysterious Tree Cavity</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Nestled in the heart of ancient trees, this cozy cavity offers the opossum the perfect hideout, safe from predators and ready for a peaceful night’s sleep. With its secretive charm, it’s the ideal spot for a nocturnal adventurer to curl up and rest! 🌳
           </div>
           <div class="card-img">
-            <img src="../images/oc/tnaks.jpg" alt="">
+            <img src="../images/entriesimg/contain/IMG_1836.PNG" alt="">
           </div>
         </div>
 
         <div id="card2" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Top Location</div>
+          <div class="card-title">Central Park</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Central Park’s opossums are the park’s hidden night owls, quietly roaming under the cover of darkness. These nocturnal creatures thrive in the park’s dense underbrush, scurrying through the shadows while keeping a low profile. With their prehensile tails and curious nature, they’re the park’s stealthy residents—seldom seen, but always around, adding to the park’s rich diversity of wildlife! 🌳🦝🌙
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/map.png" alt="">
           </div>
         </div>
 
         <div id="card3" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Good Breakfast</div>
+          <div class="card-title">Human Food</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Opossums are opportunistic eaters, often indulging in leftover human food like fruits, veggies, and even snacks. They’ll happily scavenge a bit of anything from trash cans, making their breakfast a true urban adventure! 🍕🍏🦝
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/entriesimg/opossum/IMG_1756.PNG" alt="">
           </div>
         </div>
 
         <div id="card4" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Opossum Tree Cavity</div>
+          <div class="card-title">Reserve Now</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Reserve Your Spot at Opossum’s Tree Cavity!
+            Nestled in the heart of nature, this cozy hideaway offers a unique stay, where you can relax in the company of Central Park’s stealthy nocturnal residents. A truly wild retreat! 
           </div>
           <div class="container">
 
-            <a href="#" class="button type--A">
+            <a href="../entries/test4.0.html" class="button type--A">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text" >Sure!</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--B">
+              <a href="../index.html" class="button type--B">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">No thanks</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--C">
+              <a href="../entries/ENTRY7.html" class="button type--C">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">See other options</a></span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
