--- a/entries/ENTRY8.html
+++ b/entries/ENTRY8.html
@@ -5,7 +5,7 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
-  <title>Enter if you dare</title>
+  <title>Pigeon</title>
   <meta name="description" content="">
   <meta name="author" content="">
 
@@ -15,7 +15,10 @@
 
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="../css/reset.css">
+
   <link rel="stylesheet" href="../css/About.css">
+
   
   
 
@@ -23,6 +26,9 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="../images/favicon.ico">
 </head>
+<style>
+  body{background-image: linear-gradient(#40E0D0, #0093AF);}
+</style>
 <body>
 
   <div id="main">
@@ -30,28 +36,28 @@
       <div id="drawerboxes">
         <div class="drawerbox active">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            About this space
             <span class="drawer-head">1</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Top Location
             <span class="drawer-head">2</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Good Breakfast
             <span class="drawer-head">3</span>
           </button>
         </div>
 
         <div class="drawerbox">
           <button class="drawer-btn active" onclick="slideTo(1)">
-            The wind Rises
+            Reserve
             <span class="drawer-head">4</span>
           </button>
         </div>
@@ -66,64 +72,65 @@
       </div>
       <div id="card-section">
         <div id="card1" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title"><P></P>igeon</div>
+          <div class="card-title">A Shabby Nest</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            In the hustle of New York, pigeons find comfort in their humble, often scrappy nests—usually perched on fire escapes or tucked away on city ledges. 
           </div>
           <div class="card-img">
-            <img src="../images/oc/tnaks.jpg" alt="">
+            <img src="../images/entriesimg/contain/IMG_1838.PNG" alt="">
           </div>
         </div>
 
         <div id="card2" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Top Location</div>
+          <div class="card-title">Central Park </div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            In Central Park, pigeons are the laid-back city residents, strutting around the lawns, eagerly awaiting a snack or a sunbath. 
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/map.png" alt="">
           </div>
         </div>
 
         <div id="card3" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Good Breakfast</div>
+          <div class="card-title">Human Food</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Pigeons love a good breakfast of leftover bagels, popcorn, or crumbs from city vendors. They’re the ultimate foodies, always on the lookout for tasty treats from New York’s bustling streets! 🥯🍞🐦
           </div>
           <div class="card-img">
-            <img src="../images/lingshi/duckgo.jpg" alt="">
+            <img src="../images/entriesimg/opossum/IMG_1757.PNG" alt="">
           </div>
         </div>
 
         <div id="card4" class="card">
-          <div class="card-small-title">Miyazaki Hayao</div>
-          <div class="card-title">The Wind Rises</div>
+          <div class="card-small-title">Pigeon Nest</div>
+          <div class="card-title">Reserve Now</div>
           <div class="card-content">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat a harum quos, labore dolores mollitia unde suscipit delectus autem deserunt?
+            Reserve Now at Pigeon Nest!
+            Experience the charm of city living from a pigeon’s perspective—nestled on cozy ledges, with a front-row view of the urban hustle. 🏙️🐦
           </div>
           <div class="container">
 
-            <a href="#" class="button type--A">
+            <a href="../entries/test6.0.html" class="button type--A">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text" >Sure!</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--B">
+              <a href="../index.html" class="button type--B">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">No thanks</span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
-              <a href="#" class="button type--C">
+              <a href="../entries/ENTRY9.html" class="button type--C">
               <div class="button__line"></div>
               <div class="button__line"></div>
-              <span class="button__text">ENTRY</span>
+              <span class="button__text">See other options</a></span>
               <div class="button__drow1"></div>
               <div class="button__drow2"></div>
             </a>
